crates/parser/tests/snapshots/block_string_1_folded_clip_emptyln_none_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-folded-clip-emptyln-none-eof

## Input

```
key >

  hello

```

## CST

```
SOURCE_FILE@0..15
  ENTRY@0..14
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..14
      BLOCK_STRING_HEADER@4..6
        GT@4..5 ">"
        NEWLINE@5..6 "\n"
      LINE_STRING@6..6
      NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..14
        STRING@9..14 "hello"
  NEWLINE@14..15 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@9..14 "hello",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
