crates/parser/tests/snapshots/block_string_1_folded_clip_none_emptyln_eof_nonl.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-folded-clip-none-emptyln-eof-nonl

## Input

```
key >
  hello

```

## CST

```
SOURCE_FILE@0..14
  ENTRY@0..13
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..13
      BLOCK_STRING_HEADER@4..6
        GT@4..5 ">"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..13
        STRING@8..13 "hello"
  NEWLINE@13..14 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..13 "hello",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
